--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/johnw_profile.jpg);"></div>
-							<h1><span>John Wülk</span></h1>
+							<h1><span>Johannes Wülk</span></h1>
 							<h3><span>Programmer / Linux Enthusiast</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
@@ -98,14 +98,14 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Johannes Wülk</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 1649 241 0015</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">johnwuelk{at}yahoo.de</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block"><a href="http://johnwulk.ga" target="_blank">johnwulk.ga</a></span>
-						<span class="first-block">GitHub:</span><span class="second-block"><a href="https://github.com/johnwuelk" target="_blank">pretty average</a></span></li>
+						<li><span class="first-block">Website:</span><span class="second-block"><a href="https://johnwuelk.github.io" target="_blank">johnwuelk.github.io</a></span></li>
+						<li><span class="first-block">GitHub:</span><span class="second-block"><a href="https://github.com/johnwuelk" target="_blank">github.com/johnwuelk</a></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">23 Long Bay Dr, Providenciales, Turks and Caicos Islands</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>My name is John Wülk, I first saw the light of day in Germany in 1988. I am a trained software developer who is mainly specialized in cross-platform and OS solutions. Besides my IT activities, my passions are baseball and music. I recently moved to the beautiful by nature Turks and Caicos Islands that I can now call home thanks to my beautiful wife Dorissa.</p>
+					<p>My name is Johannes Wülk, I first saw the light of day in Germany in 1988. I am a trained software developer who is mainly specialized in cross-platform and OS solutions. Besides my IT activities, my passions are baseball and music. I recently moved to the beautiful by nature Turks and Caicos Islands that I can now call home thanks to my dear wife Dorissa.</p>
 					<p>
 					<p>Over the length of my career I have participated in workshops and projects which strengthened my special interest for software development. I have gained experience with different programming languages, predominantly Java and Python. As a programmer I came across working with GNU/Linux here and there but only until recent I really delved into the world of Unix and now I'm hooked. Arch Linux is pretty much my playground.</p>
 						<ul class="fh5co-social-icons">
@@ -150,7 +150,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Web Developer</h3>
-									<span class="company">Ghani Media in Karlsruhe - 2014 - 2015</span>
+									<span class="company">Ghani Media in Bad Schönborn - 2014 - 2015</span>
 								</div>
 								<div class="timeline-body">
 									<p>Ghani Media is a company specialized in the creation of websites and Smartphone apps for medium to large enterprises - Technologies: Bootstrap, CMS like Wordpress or Joomla, PHP frameworks, HTML5</p>
@@ -490,7 +490,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2019. John Wulk. All Rights Reserved. <!--<br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>--></p>
+					<p>&copy; 2021. John Wulk. All Rights Reserved. <!--<br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>--></p>
 				</div>
 			</div>
 		</div>
