--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; of John Wulk</title>
+	<title>Profile &mdash; of Johannes Wülk</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Hire a well trained all around IT professional" />
 	<meta name="keywords" content="john wuelk developer programmer turks and caicos" />
@@ -490,7 +490,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2021. John Wulk. All Rights Reserved. <!--<br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>--></p>
+					<p>&copy; 2021. Johannes Wülk. All Rights Reserved. <!--<br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>--></p>
 				</div>
 			</div>
 		</div>
