--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>My name is Johannes Wülk, I first saw the light of day in Germany in 1988. I am a trained software developer who is mainly specialized in cross-platform and OS solutions. Besides my IT activities, my passions are baseball and music. I recently moved to the beautiful by nature Turks and Caicos Islands that I can now call home thanks to my dear wife Dorissa.</p>
+					<p>My name is Johannes Wülk, I first saw the light of day in Germany in 1988. I am a trained software developer who is mainly specialized in cross-platform and OS solutions. Besides my IT activities, my passions are baseball and music. I recently moved to the beautiful by nature Turks and Caicos Islands that I can now call home.</p>
 					<p>
-					<p>Over the length of my career I have participated in workshops and projects which strengthened my special interest for software development. I have gained experience with different programming languages, predominantly Java and Python. As a programmer I came across working with GNU/Linux here and there but only until recent I really delved into the world of Unix and now I'm hooked. Arch Linux is pretty much my playground.</p>
+					<p>Over the length of my career I have participated in workshops and projects which strengthened my special interest for software development. I have gained experience with different programming languages, predominantly Java and Bash scripting. As a programmer I came across working with GNU/Linux here and there but only until recent I really delved into the world of Unix and now I'm hooked. Arch Linux is pretty much my playground.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
@@ -154,6 +154,19 @@
 								</div>
 								<div class="timeline-body">
 									<p>Ghani Media is a company specialized in the creation of websites and Smartphone apps for medium to large enterprises - Technologies: Bootstrap, CMS like Wordpress or Joomla, PHP frameworks, HTML5</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">IT Manager</h3>
+									<span class="company">Airbnb Hosts Adrian & Sophia</span>
+								</div>
+								<div class="timeline-body">
+									<p>Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance</p>
+									<p>Further development of the customer portal</p>
 								</div>
 							</div>
 						</li>
