--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">IT Manager</h3>
-									<span class="company">Airbnb Hosts Adrian & Sophia 2014 - 2016</span>
+									<span class="company">Airbnb Hosts Adrian & Sophia - 2014 - 2016</span>
 								</div>
 								<div class="timeline-body">
 									<p>Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance</p>
