--- a/index.html
+++ b/index.html
@@ -165,8 +165,16 @@
 									<span class="company">Airbnb Hosts Adrian & Sophia - 2014 - 2016</span>
 								</div>
 								<div class="timeline-body">
-									<p>Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance</p>
-									<p>Further development of the customer portal</p>
+									<p>
+										<ul>
+											<li>
+												Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance</p>
+											</li>
+											<li>
+												Further development of the customer portal
+											</li>
+										</ul
+									</p>
 								</div>
 							</div>
 						</li>
