--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 									<p>
 										<ul>
 											<li>
-												Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance</p>
+												Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance
 											</li>
 											<li>
 												Further development of the customer portal
