--- a/index.html
+++ b/index.html
@@ -165,16 +165,8 @@
 									<span class="company">Airbnb Hosts Adrian & Sophia - 2014 - 2016</span>
 								</div>
 								<div class="timeline-body">
-									<p>
-										<ul>
-											<li>
-												Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance
-											</li>
-											<li>
-												Further development of the customer portal
-											</li>
-										</ul
-									</p>
+									<p>- Embedding the Airbnb booking system into a Content Management System of the customer including its maintenance</p>
+									<p>- Further development of the customer portal</p>
 								</div>
 							</div>
 						</li>
