--- a/rph/index.html
+++ b/rph/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	  <link rel="shortcut icon" href="android-icon.png" sizes="196x196">
     <title>Attendance Sheet</title>
     <link href="./style.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
