--- a/rph/index.html
+++ b/rph/index.html
@@ -74,13 +74,13 @@
 		<option value="Phenel William Valcin">Phenel William Valcin</option>
 		<option value="Roman">Roman</option>
 		<option value="Ronalie">Ronalie</option>
-		<option value="Ronaya"><Ronaya/option>
+		<option value="Ronaya">Ronaya</option>
 		<option value="Synkero">Synkero</option>
 	</select>
         <input type="name" id="name" placeholder="Select or Type a Child" onfocus="clear()"/>
 	<br>
 	<div class="buttons">
-		<button id="enter" class="btn">Enter!</button>
+		<button id="enter" class="btn">Enter</button>
 		<button id="leave" class="btn">Leave</button>
 		<button id="report" class="btn" style="margin-left:30%;">Generate Report</button>
 	</div>
