--- a/rph/index.html
+++ b/rph/index.html
@@ -82,7 +82,7 @@
 	<div class="buttons">
 		<button id="enter" class="btn">Enter</button>
 		<button id="leave" class="btn">Leave</button>
-		<button id="report" class="btn" style="margin-left:30%;">Generate Report</button>
+		<!--<button id="report" class="btn" style="margin-left:30%;">Generate Report</button>-->
 	</div>
       </div>
 
