--- a/rph/index.html
+++ b/rph/index.html
@@ -13,8 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
 
-
-        <button id="downloadLink" class="btn" type="submit">Export All</button>
+	<button id="report">Generate Report</button>
+        <button id="downloadLink" type="submit">Generate & Export</button>
 	<script>
 		window.onbeforeunload = function() {
         		return "Reloading will erase ALL content! Please click Cancel";
@@ -82,7 +82,6 @@
 	<div class="buttons">
 		<button id="enter" class="btn">Enter</button>
 		<button id="leave" class="btn">Leave</button>
-		<!--<button id="report" class="btn" style="margin-left:30%;">Generate Report</button>-->
 	</div>
       </div>
 
