--- a/rph/index.html
+++ b/rph/index.html
@@ -13,8 +13,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
 	<br>
-	<button id="report">Generate Report</button>
-        <button id="downloadLink" type="submit">Generate & Export</button>
+        <button id="report" style="float:right;">Generate Report</button>
+        <br>
+        <br>
+        <button id="downloadLink" type="submit" style="float:right;">Generate & Export</button>
 	<script>
 		window.onbeforeunload = function() {
         		return "Reloading will erase ALL content! Please click Cancel";
