--- a/rph/index.html
+++ b/rph/index.html
@@ -59,6 +59,7 @@
 	    <datalist id="childname">
 		  <label>
 		    <select name="kinder" id="name">
+			<option value="Layla-Grace"></option>
 		    	<option value="Adrian Morris"></option>
 			<option value="Ana Adams"></option>
 			<option value="Antonius"></option>
@@ -73,6 +74,7 @@
 			<option value="Ember Dickenson"></option>
 			<option value="Jayce Smith"></option>
 			<option value="Khalil"></option>
+			<option value="Layla-Grace"></option>
 			<option value="Nolan Lightbourne"></option>
 			<option value="Nova"></option>
 			<option value="Phenel William Valcin"></option>
