--- a/rph/index.html
+++ b/rph/index.html
@@ -77,6 +77,7 @@
 			<option value="Ember Dickenson"></option>
 			<option value="Jayce Smith"></option>
 			<option value="Khalil"></option>
+			<option value="Layla-Grace"></option>
 			<option value="Nolan Lightbourne"></option>
 			<option value="Nova"></option>
 			<option value="Phenel William Valcin"></option>
