--- a/rph/index.html
+++ b/rph/index.html
@@ -13,10 +13,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
 	<br>
-        <button id="report" style="display: none; float:right;">Generate Report</button>
+        <button id="report" style="float:right;">Generate Report</button>
         <br>
         <br>
-        <button id="downloadLink" type="submit" style="display: none; float:right;">Generate & Export</button>
+        <button id="downloadLink" type="submit" style="float:right;">Generate & Export</button>
 
 	<!--
         <button id="empl" type="submit" onclick="selectEmployee()"> EMPLOYEES </button>
