--- a/rph/index.html
+++ b/rph/index.html
@@ -14,9 +14,9 @@
   </head>
         <button id="report" style="display:none;float:right;">Generate Report</button>
         <button id="downloadLink" type="submit" style="display:none;float:right;">Generate & Export</button>
-	<label style="float:right;" for="avatar">Load backup file:</label>
-	<input style="float:right;margin-right:-100px;" type="file" id="files" name="files[]" multiple />
-	<button style="margin: 50px -150px 0 0" id="empl" type="submit" onclick="selectEmployee()"> EMPLOYEES </button>
+	<label style="float:right;" for="avatar">Load backup file:</label><br>
+	<input style="float:right;margin-right:-150px;" type="file" id="files" name="files[]" multiple />
+	<button id="empl" type="submit" onclick="selectEmployee()"> EMPLOYEES </button>
         <span id="helptext"><= Click to Select</span>
         <br>
 	<script>
