--- a/rph/index.html
+++ b/rph/index.html
@@ -73,6 +73,7 @@
 			<option value="Chaysen"></option>
 			<option value="Ember Dickenson"></option>
 			<option value="Jayce Smith"></option>
+			<option value="Jeremiah"></option>
 			<option value="Khalil"></option>
 			<option value="Layla-Grace"></option>
 			<option value="Nolan Lightbourne"></option>
