--- a/rph/index.html
+++ b/rph/index.html
@@ -72,6 +72,7 @@
 			<option value="Caylee Gardener"></option>
 			<option value="Chaysen"></option>
 			<option value="Ember Dickenson"></option>
+			<option value="Elizabeth Jardine"></option>
 			<option value="Jayce Smith"></option>
 			<option value="Jeremiah"></option>
 			<option value="Khalil"></option>
