--- a/rph/index.html
+++ b/rph/index.html
@@ -14,7 +14,7 @@
   </head>
         <button id="report" style="display:none;float:right;">Generate Report</button>
         <button id="downloadLink" type="submit" style="display:none;float:right;">Generate & Export</button>
-	<label style="float:right;color:white;" for="avatar">Load backup file:</label><br>
+	<label style="float:right;color:white;" for="avatar">Restore backup (txt):</label><br>
 	<input style="float:right;margin-right:-160px;" type="file" id="files" name="files[]" multiple />
 	<button id="empl" type="submit" onclick="selectEmployee()"> EMPLOYEES </button>
         <span id="helptext"><= Click to Select</span>
