--- a/rph/index.html
+++ b/rph/index.html
@@ -15,7 +15,7 @@
         <button id="report" style="display:none;float:right;">Generate Report</button>
         <button id="downloadLink" type="submit" style="display:none;float:right;">Generate & Export</button>
 	<label style="float:right;color:white;" for="avatar">Restore backup (txt):</label><br>
-	<input style="float:right;margin-right:-160px;" type="file" id="files" name="files[]" multiple />
+	<input style="float:right;margin-right:-160px;" type="file" id="files" name="files[]" multiple accept=".txt"/>
 	<button id="empl" type="submit" onclick="selectEmployee()"> EMPLOYEES </button>
         <span id="helptext"><= Click to Select</span>
         <br>
