--- a/rph/index.html
+++ b/rph/index.html
@@ -71,6 +71,7 @@
 			<option value="Caileigh Lightbourne"></option>
 			<option value="Caylee Gardener"></option>
 			<option value="Chaysen"></option>
+			<option value="Dhamir"></option>
 			<option value="Ember Dickenson"></option>
 			<option value="Elizabeth Jardine"></option>
 			<option value="Jayce Smith"></option>
@@ -80,6 +81,7 @@
 			<option value="Nolan Lightbourne"></option>
 			<option value="Nova"></option>
 			<option value="Phenel William Valcin"></option>
+			<option value="Rodson"></option>
 			<option value="Roman"></option>
 			<option value="Ronalie"></option>
 			<option value="Ronaya"></option>
