--- a/rph/index.html
+++ b/rph/index.html
@@ -72,6 +72,7 @@
 			<option value="Caylee Gardener"></option>
 			<option value="Chaysen"></option>
 			<option value="Dhamir"></option>
+			<option value="D'zuri"></option>
 			<option value="Ember Dickenson"></option>
 			<option value="Elizabeth Jardine"></option>
 			<option value="Jayce Smith"></option>
@@ -81,11 +82,13 @@
 			<option value="Nolan Lightbourne"></option>
 			<option value="Nova"></option>
 			<option value="Phenel William Valcin"></option>
+			<option value="Richie Dorcelian"></option>
 			<option value="Rodson"></option>
 			<option value="Roman"></option>
 			<option value="Ronalie"></option>
 			<option value="Ronaya"></option>
 			<option value="Senai"></option>
+			<option value="Shantel Jasmin W."></option>
 	             </select>
 		   </label>
 	    </datalist>
