--- a/index_ORIGINAL.html
+++ b/index_ORIGINAL.html
@@ -100,7 +100,7 @@
 						<li><span class="first-block">Email:</span><span class="second-block">johnwuelk{at}yahoo.de</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block"><a href="https://johnwuelk.github.io" target="_blank">johnwuelk.github.io</a></span></li>
 						<li><span class="first-block">GitHub:</span><span class="second-block"><a href="https://github.com/johnwuelk" target="_blank">github.com/johnwuelk</a></span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">23 Long Bay Dr, Providenciales, Turks and Caicos Islands</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Providenciales, Turks and Caicos Islands</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
