--- a/rph/index.html
+++ b/rph/index.html
@@ -75,6 +75,7 @@
 			<option value="D'zuri"></option>
 			<option value="Ember Dickenson"></option>
 			<option value="Elizabeth Jardine"></option>
+			<option value="Gaelle Alexandre"></option>
 			<option value="Jayce Smith"></option>
 			<option value="Jeremiah"></option>
 			<option value="Khalil"></option>
