--- a/rph/index.html
+++ b/rph/index.html
@@ -77,6 +77,7 @@
 			<option value="Elizabeth Jardine"></option>
 			<option value="Gaelle Alexandre"></option>
 			<option value="Jayce Smith"></option>
+			<option value="Jayla Clarke"></option>
 			<option value="Jeremiah"></option>
 			<option value="Khalil"></option>
 			<option value="Layla-Grace"></option>
