--- a/shane/home/services/service1/index.html
+++ b/shane/home/services/service1/index.html
@@ -7,7 +7,7 @@
   	<meta name="author"      content="map[]">
     
     	<title>Interial Design</title>
-	<link rel="shortcut icon" href="https://johnwuelk.github.io/shaneimages/gt_favicon.png">
+	<link rel="shortcut icon" href="https://johnwuelk.github.io/shane/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -31,9 +31,9 @@
 
     
       <header id="header">
-  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('https://johnwuelk.github.io/shaneimages/bg_head.jpg');">
+  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('https://johnwuelk.github.io/shane/images/bg_head.jpg');">
     <h1 id="logo" class="text-center">
-      <img class='img-circle' src="https://johnwuelk.github.io/shaneimages/paradigm.png" alt="">
+      <img class='img-circle' src="https://johnwuelk.github.io/shane/images/paradigm.png" alt="">
       <span class="title">Paradigm - Architectural Design</span>
       <span class="tagline">Creativity &#43; Innovation &#43; Leadership<br>
         <a href="mailto:"></a>
