--- a/contact/index.html
+++ b/contact/index.html
@@ -270,7 +270,7 @@
 
                 <h1 id="would-you-like-to-meet-in-person-and-discuss-your-needs">Would you like to meet in person and discuss your needs?</h1>
 <!-- raw HTML omitted -->
-<p>Or are you just curious about something?</p>
+<p>Or are you just curious?</p>
 <p>Please feel free to contact us.</p>
 
 
