removed prices and added date field in contact form

--- a/packages/index.html
+++ b/packages/index.html
@@ -36,7 +36,7 @@
 
 
 
-<link href="/css/custom.css?1720595213" rel="stylesheet">
+<link href="/css/custom.css?1721199941" rel="stylesheet">
 
 
 
@@ -268,7 +268,7 @@
 
             <section>
 
-                <p><strong>Standard Website</strong> (3K USD or near offer)</p>
+                <p><strong>Standard Website</strong></p>
 <ul>
 <li>Attractive, modern design</li>
 <li>Advanced features such as video headers, image sliders, and galleries</li>
@@ -277,7 +277,7 @@
 </ul>
 <p><br>
 <br>
-<strong>Premium Website</strong> (6K USD or near offer)</p>
+<strong>Premium Website</strong></p>
 <ul>
 <li>Implementation of any feature desired by you</li>
 <li>Easily maintainable and editable site</li>
